@@ -1,3 +1,8 @@
+2017-07-02  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>
+
+	* coders/png.c: Reject a PNG file if the file size is too small
+	(less than 60 bytes).
+
 2017-07-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/dpx.c (ReadDPXImage): Compute required file size and
